Nullable `Watt` and `TotalEnergy`
