# server/src/OpenEMS.Application/Devices/SwitchConsumerDto.cs
@@ -12,8 +12,7 @@ public partial class SwitchConsumerDto
     public required DeviceName Name { get; init; }
     public required ControlMode Mode { get; init; }
     public required SwitchStatus SwitchStatus { get; init; }
-    public required bool HasReportedPowerConsumption { get; init; }
-    public required Watt CurrentPowerConsumption { get; init; }
+    public required Watt? CurrentPowerConsumption { get; init; }
 
     public static partial SwitchConsumerDto From(SwitchConsumer switchConsumer);
 }
