# server/src/OpenEMS.Server/Swagger/backend_api.yaml
@@ -14,7 +14,8 @@ paths:
           in: query
           required: true
           schema:
-            $ref: '#/components/schemas/DeviceCategory'
+            allOf:
+              - $ref: '#/components/schemas/DeviceCategory'
       responses:
         '200':
           description: OK
@@ -79,13 +80,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AddSwitchConsumerCommand'
+              allOf:
+                - $ref: '#/components/schemas/AddSwitchConsumerCommand'
           text/json:
             schema:
-              $ref: '#/components/schemas/AddSwitchConsumerCommand'
+              allOf:
+                - $ref: '#/components/schemas/AddSwitchConsumerCommand'
           application/*+json:
             schema:
-              $ref: '#/components/schemas/AddSwitchConsumerCommand'
+              allOf:
+                - $ref: '#/components/schemas/AddSwitchConsumerCommand'
       responses:
         '200':
           description: OK
@@ -97,13 +101,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/EditSwitchConsumerCommand'
+              allOf:
+                - $ref: '#/components/schemas/EditSwitchConsumerCommand'
           text/json:
             schema:
-              $ref: '#/components/schemas/EditSwitchConsumerCommand'
+              allOf:
+                - $ref: '#/components/schemas/EditSwitchConsumerCommand'
           application/*+json:
             schema:
-              $ref: '#/components/schemas/EditSwitchConsumerCommand'
+              allOf:
+                - $ref: '#/components/schemas/EditSwitchConsumerCommand'
       responses:
         '200':
           description: OK
@@ -117,7 +124,8 @@ paths:
           in: path
           required: true
           schema:
-            $ref: '#/components/schemas/SwitchConsumerId'
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -130,13 +138,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ManuallySwitchSwitchConsumerCommand'
+              allOf:
+                - $ref: '#/components/schemas/ManuallySwitchSwitchConsumerCommand'
           text/json:
             schema:
-              $ref: '#/components/schemas/ManuallySwitchSwitchConsumerCommand'
+              allOf:
+                - $ref: '#/components/schemas/ManuallySwitchSwitchConsumerCommand'
           application/*+json:
             schema:
-              $ref: '#/components/schemas/ManuallySwitchSwitchConsumerCommand'
+              allOf:
+                - $ref: '#/components/schemas/ManuallySwitchSwitchConsumerCommand'
       responses:
         '200':
           description: OK
@@ -149,13 +160,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AddProducerCommand'
+              allOf:
+                - $ref: '#/components/schemas/AddProducerCommand'
           text/json:
             schema:
-              $ref: '#/components/schemas/AddProducerCommand'
+              allOf:
+                - $ref: '#/components/schemas/AddProducerCommand'
           application/*+json:
             schema:
-              $ref: '#/components/schemas/AddProducerCommand'
+              allOf:
+                - $ref: '#/components/schemas/AddProducerCommand'
       responses:
         '200':
           description: OK
@@ -167,13 +181,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/EditProducerCommand'
+              allOf:
+                - $ref: '#/components/schemas/EditProducerCommand'
           text/json:
             schema:
-              $ref: '#/components/schemas/EditProducerCommand'
+              allOf:
+                - $ref: '#/components/schemas/EditProducerCommand'
           application/*+json:
             schema:
-              $ref: '#/components/schemas/EditProducerCommand'
+              allOf:
+                - $ref: '#/components/schemas/EditProducerCommand'
       responses:
         '200':
           description: OK
@@ -187,7 +204,8 @@ paths:
           in: path
           required: true
           schema:
-            $ref: '#/components/schemas/ProducerId'
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -200,13 +218,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AddElectricityMeterCommand'
+              allOf:
+                - $ref: '#/components/schemas/AddElectricityMeterCommand'
           text/json:
             schema:
-              $ref: '#/components/schemas/AddElectricityMeterCommand'
+              allOf:
+                - $ref: '#/components/schemas/AddElectricityMeterCommand'
           application/*+json:
             schema:
-              $ref: '#/components/schemas/AddElectricityMeterCommand'
+              allOf:
+                - $ref: '#/components/schemas/AddElectricityMeterCommand'
       responses:
         '200':
           description: OK
@@ -218,13 +239,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/EditElectricityMeterCommand'
+              allOf:
+                - $ref: '#/components/schemas/EditElectricityMeterCommand'
           text/json:
             schema:
-              $ref: '#/components/schemas/EditElectricityMeterCommand'
+              allOf:
+                - $ref: '#/components/schemas/EditElectricityMeterCommand'
           application/*+json:
             schema:
-              $ref: '#/components/schemas/EditElectricityMeterCommand'
+              allOf:
+                - $ref: '#/components/schemas/EditElectricityMeterCommand'
       responses:
         '200':
           description: OK
@@ -238,7 +262,8 @@ paths:
           in: path
           required: true
           schema:
-            $ref: '#/components/schemas/ElectricityMeterId'
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -324,7 +349,8 @@ paths:
           in: query
           required: true
           schema:
-            $ref: '#/components/schemas/DeviceCategory'
+            allOf:
+              - $ref: '#/components/schemas/DeviceCategory'
       responses:
         '200':
           description: OK
@@ -372,7 +398,8 @@ paths:
           in: query
           required: true
           schema:
-            $ref: '#/components/schemas/DeviceCategory'
+            allOf:
+              - $ref: '#/components/schemas/DeviceCategory'
       responses:
         '200':
           description: OK
@@ -401,9 +428,10 @@ components:
       type: object
       properties:
         integration:
-          $ref: '#/components/schemas/IntegrationIdentifier'
+          allOf:
+            - $ref: '#/components/schemas/IntegrationIdentifier'
         deviceName:
-          $ref: '#/components/schemas/DeviceName'
+          type: string
       additionalProperties: false
     AddProducerCommand:
       required:
@@ -412,9 +440,10 @@ components:
       type: object
       properties:
         integration:
-          $ref: '#/components/schemas/IntegrationIdentifier'
+          allOf:
+            - $ref: '#/components/schemas/IntegrationIdentifier'
         deviceName:
-          $ref: '#/components/schemas/DeviceName'
+          type: string
       additionalProperties: false
     AddSwitchConsumerCommand:
       required:
@@ -423,9 +452,10 @@ components:
       type: object
       properties:
         integration:
-          $ref: '#/components/schemas/IntegrationIdentifier'
+          allOf:
+            - $ref: '#/components/schemas/IntegrationIdentifier'
         deviceName:
-          $ref: '#/components/schemas/DeviceName'
+          type: string
       additionalProperties: false
     AddableDevelopmentDeviceDto:
       required:
@@ -434,9 +464,9 @@ components:
       type: object
       properties:
         deviceId:
-          $ref: '#/components/schemas/IntegrationDeviceId'
+          type: string
         deviceName:
-          $ref: '#/components/schemas/DeviceName'
+          type: string
       additionalProperties: false
     AddableShellyDeviceDto:
       required:
@@ -445,9 +475,9 @@ components:
       type: object
       properties:
         deviceId:
-          $ref: '#/components/schemas/IntegrationDeviceId'
+          type: string
         deviceName:
-          $ref: '#/components/schemas/DeviceName'
+          type: string
       additionalProperties: false
     BatteryChargeStatus:
       enum:
@@ -466,9 +496,11 @@ components:
           type: boolean
           readOnly: true
         chargeStatus:
-          $ref: '#/components/schemas/BatteryChargeStatus'
+          allOf:
+            - $ref: '#/components/schemas/BatteryChargeStatus'
         charge:
-          $ref: '#/components/schemas/Percentage'
+          type: number
+          format: double
       additionalProperties: false
     ConsumerStatusDto:
       required:
@@ -481,9 +513,11 @@ components:
           type: boolean
           readOnly: true
         currentPowerConsumption:
-          $ref: '#/components/schemas/Watt'
+          type: number
+          format: double
         maximumPowerConsumption:
-          $ref: '#/components/schemas/Watt'
+          type: number
+          format: double
       additionalProperties: false
     ControlMode:
       enum:
@@ -525,9 +559,10 @@ components:
       type: object
       properties:
         electricityMeterId:
-          $ref: '#/components/schemas/ElectricityMeterId'
+          type: string
+          format: uuid
         name:
-          $ref: '#/components/schemas/DeviceName'
+          type: string
       additionalProperties: false
     EditProducerCommand:
       required:
@@ -536,9 +571,10 @@ components:
       type: object
       properties:
         producerId:
-          $ref: '#/components/schemas/ProducerId'
+          type: string
+          format: uuid
         name:
-          $ref: '#/components/schemas/DeviceName'
+          type: string
       additionalProperties: false
     EditSwitchConsumerCommand:
       required:
@@ -547,9 +583,10 @@ components:
       type: object
       properties:
         switchConsumerId:
-          $ref: '#/components/schemas/SwitchConsumerId'
+          type: string
+          format: uuid
         name:
-          $ref: '#/components/schemas/DeviceName'
+          type: string
       additionalProperties: false
     ElectricityMeterDto:
       required:
@@ -560,13 +597,17 @@ components:
       type: object
       properties:
         id:
-          $ref: '#/components/schemas/ElectricityMeterId'
+          type: string
+          format: uuid
         name:
-          $ref: '#/components/schemas/DeviceName'
+          type: string
         currentPowerDirection:
-          $ref: '#/components/schemas/GridPowerDirection'
+          allOf:
+            - $ref: '#/components/schemas/GridPowerDirection'
         currentPower:
-          $ref: '#/components/schemas/Watt'
+          allOf:
+            - $ref: '#/components/schemas/Watt'
+          nullable: true
       additionalProperties: false
     ElectricityMeterId:
       type: string
@@ -590,13 +631,17 @@ components:
           type: boolean
           readOnly: true
         currentPowerDirection:
-          $ref: '#/components/schemas/GridPowerDirection'
+          allOf:
+            - $ref: '#/components/schemas/GridPowerDirection'
         currentPower:
-          $ref: '#/components/schemas/Watt'
+          type: number
+          format: double
         maximumPowerConsumption:
-          $ref: '#/components/schemas/Watt'
+          type: number
+          format: double
         maximumPowerFeedIn:
-          $ref: '#/components/schemas/Watt'
+          type: number
+          format: double
       additionalProperties: false
     HealthReportDto:
       required:
@@ -611,7 +656,8 @@ components:
         version:
           type: string
         status:
-          $ref: '#/components/schemas/HealthStatus'
+          allOf:
+            - $ref: '#/components/schemas/HealthStatus'
         totalDuration:
           type: string
           format: date-span
@@ -631,13 +677,17 @@ components:
       type: object
       properties:
         batteryStatus:
-          $ref: '#/components/schemas/BatteryStatusDto'
+          allOf:
+            - $ref: '#/components/schemas/BatteryStatusDto'
         gridStatus:
-          $ref: '#/components/schemas/GridStatusDto'
+          allOf:
+            - $ref: '#/components/schemas/GridStatusDto'
         consumerStatus:
-          $ref: '#/components/schemas/ConsumerStatusDto'
+          allOf:
+            - $ref: '#/components/schemas/ConsumerStatusDto'
         producerStatus:
-          $ref: '#/components/schemas/ProducerStatusDto'
+          allOf:
+            - $ref: '#/components/schemas/ProducerStatusDto'
       additionalProperties: false
     IntegrationDescriptionDto:
       required:
@@ -646,7 +696,7 @@ components:
       type: object
       properties:
         id:
-          $ref: '#/components/schemas/IntegrationId'
+          type: string
         name:
           type: string
       additionalProperties: false
@@ -661,9 +711,9 @@ components:
       type: object
       properties:
         integration:
-          $ref: '#/components/schemas/IntegrationId'
+          type: string
         device:
-          $ref: '#/components/schemas/IntegrationDeviceId'
+          type: string
       additionalProperties: false
     ManuallySwitchSwitchConsumerCommand:
       required:
@@ -672,9 +722,11 @@ components:
       type: object
       properties:
         switchConsumerId:
-          $ref: '#/components/schemas/SwitchConsumerId'
+          type: string
+          format: uuid
         status:
-          $ref: '#/components/schemas/SwitchStatus'
+          allOf:
+            - $ref: '#/components/schemas/SwitchStatus'
       additionalProperties: false
     MeDto:
       required:
@@ -705,11 +757,14 @@ components:
       type: object
       properties:
         id:
-          $ref: '#/components/schemas/ProducerId'
+          type: string
+          format: uuid
         name:
-          $ref: '#/components/schemas/DeviceName'
+          type: string
         currentPowerProduction:
-          $ref: '#/components/schemas/Watt'
+          allOf:
+            - $ref: '#/components/schemas/Watt'
+          nullable: true
       additionalProperties: false
     ProducerId:
       type: string
@@ -725,9 +780,11 @@ components:
           type: boolean
           readOnly: true
         currentPowerProduction:
-          $ref: '#/components/schemas/Watt'
+          type: number
+          format: double
         maximumPowerProduction:
-          $ref: '#/components/schemas/Watt'
+          type: number
+          format: double
       additionalProperties: false
     ShellyPermissionGrantUriResponse:
       required:
@@ -741,7 +798,6 @@ components:
     SwitchConsumerDto:
       required:
         - currentPowerConsumption
-        - hasReportedPowerConsumption
         - id
         - mode
         - name
@@ -749,17 +805,20 @@ components:
       type: object
       properties:
         id:
-          $ref: '#/components/schemas/SwitchConsumerId'
+          type: string
+          format: uuid
         name:
-          $ref: '#/components/schemas/DeviceName'
+          type: string
         mode:
-          $ref: '#/components/schemas/ControlMode'
+          allOf:
+            - $ref: '#/components/schemas/ControlMode'
         switchStatus:
-          $ref: '#/components/schemas/SwitchStatus'
-        hasReportedPowerConsumption:
-          type: boolean
+          allOf:
+            - $ref: '#/components/schemas/SwitchStatus'
         currentPowerConsumption:
-          $ref: '#/components/schemas/Watt'
+          allOf:
+            - $ref: '#/components/schemas/Watt'
+          nullable: true
       additionalProperties: false
     SwitchConsumerId:
       type: string
